# Password-manager-on-Rust

./: Cargo.toml  README.md  data.txt
frontend (react app)/: App.js
src/: App.js  main.rs  style.css
src/core/: main.rc
